[tool.poetry]
name = "core"
version = "0.1.0"
description = "Low level components of albatross project"
authors = []
license = "apache2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
